--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "maeva-sockets-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "dist/client.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel": "babel --out-dir dist/ app",
